--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "acorn": "^3.1.0",
     "escodegen": "^1.8.0"
   },
+  "bin": {
+    "jsdeob": "./bin/jsdeob.js"
+  },
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^2.4.5"
